# SearchEngine

./: CMakeLists.txt  search_engine.sln  search_engine.vcxproj  search_engine.vcxproj.filters
include/: ConverterJSON.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  search_engine.cpp
tests/: CMakeLists.txt  test_search_engine.cpp
